tests/shouldFail/booleanOr.c
#include <limits.h>

int main(void){ 
	return (long long) 0 || INT_MAX+1;
}

